--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,20 +6,28 @@
 	"image": "mcr.microsoft.com/devcontainers/jekyll:2-bookworm",
 	"features": {
 		"ghcr.io/stu-bell/devcontainer-features/node:0": {}
-	}
-
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
+	"forwardPorts": [
+		4000,
+		35729
+	],
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "jekyll --version"
-
 	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
-}
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"jekyll.jekyll-syntax-highlighting",
+				"Shopify.ruby-lsp",
+				"castwide.solargraph"
+			],
+			"settings": {
+				"terminal.integrated.defaultProfile.linux": "bash"
+			}
+		},
+		// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+		"remoteUser": "vscode"
+	}
