Enabling Thunderstone and Rotorvault

--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -1,9 +1,9 @@
 # - name: "Calectra"
 #   logo: "/assets/images/logos/calectra_logo.jpg"
 #   url: "https://www.calectra.com/"
-# - name: "Rotorvault"
-#   logo: "/assets/images/logos/rotorvault_logo.jpg"
-#   url: "https://www.rotorvault.com/"
-# - name: "Thunderstone"
-#   logo: "/assets/images/logos/Thunderstone-Logo.svg"
-#   url: "https://www.thunderstone.rocks/"
+- name: "Rotorvault"
+  logo: "/assets/images/logos/rotorvault_logo.jpg"
+  url: "https://www.rotorvault.com/"
+- name: "Thunderstone"
+  logo: "/assets/images/logos/Thunderstone-yellow.png"
+  url: "https://www.thunderstone.rocks/"
