Update client list and logo for Calectra

--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -1,6 +1,6 @@
-# - name: "Calectra"
-#   logo: "/assets/images/logos/calectra_logo.jpg"
-#   url: "https://www.calectra.com/"
+- name: "Calectra"
+  logo: "assets/images/logos/Calectra_Logo_BrightOrange_Transparent-Background.png"
+  url: "https://www.calectra.com/"
 - name: "Rotorvault"
   logo: "/assets/images/logos/rotorvault_logo.jpg"
   url: "https://www.rotorvault.com/"
